src/widgets/snapshots/timr_tui__widgets__timer_test__timer_edit_minutes.snap
---
source: src/widgets/timer_test.rs
expression: t.backend()
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                         █████    █████ █████                         "
"                         ██    ██ ██ ██ ██ ██                         "
"                         █████    ██ ██ ██ ██                         "
"                            ██ ██ ██ ██ ██ ██                         "
"                         █████    █████ █████                         "
"                         ─────                                        "
"                         TIMER [EDIT MINUTES]                         "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
